# s3_image_frappe

./: .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  license.txt  pyproject.toml
s3_image_frappe/: hooks.py  modules.txt  s3_img_uploader.py
s3_image_frappe/config/: desktop.py  docs.py
s3_image_frappe/s3_image_frappe/doctype/s3_image_upload/: s3_image_upload.js  s3_image_upload.json  s3_image_upload.py  test_s3_image_upload.py
