[project]
name = "s3_image_frappe"
authors = [
    { name = "Ahmad Hussnain", email = "ahmadhussnain787@gmail.com"}
]
description = "The following Frappe app automatically uploads all Frappe images to an AWS S3 bucket."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
